Work towards converting rebased base to openapi spec
